--- a/wiki/SkinEngine.wiki
+++ b/wiki/SkinEngine.wiki
@@ -18,16 +18,43 @@ http://android-skin-engine.googlecode.com/files/SkinEngineDemo-p2.png
 3、进行换肤。从主页面点击“go to activity: change skin”按钮跳转到换肤页面，点击“click to change skin”，会从SkinEngineDemoSkin.apk中获取皮肤资源，执行换肤操作。可以看到SkinEngineDemo程序的外观发生改变（无论是新打开的页面还是换肤操作前已经存在的页面），按钮按下态、字体、图片、复选框、列表按下态等从原程序的蓝色调资源改变为皮肤包里绿色调的资源。
 
 =使用方法=
-1、编写你的android应用程序，在布局文件中以赋值为样式属性(style attributes)的方式标识需要进行换肤的控件的属性，定义好相关的主题、属性，确保你的程序可以正常运行。
+1、编写你的android应用程序，在布局文件中以赋值为样式属性(style attributes)的方式标识需要进行换肤的控件的属性，定义好相关的主题、属性，确保你的程序可以正常运行。例如：
 
-2、编写皮肤资源包程序。把皮肤资源按照正常android应用程序结构组织。主程序将主题中定义的样式属性名字为映射依据，找到皮肤资源程序里的主题中定义样式属性的值，作为替换皮肤资源。
+{{{
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="textColorTheme"
+                android:textColor="?textColorTheme" />
+}}}
+
+2、编写皮肤资源包程序，把皮肤资源按照正常android应用程序结构组织。主程序将主题中定义的样式属性名字为映射依据，找到皮肤资源程序里的主题中定义样式属性的值，作为替换皮肤资源。
 
 3、主程序引用皮肤引擎库skin.jar。
 
-4、在主程序启动时（一般是在Application子类里），初始化皮肤引擎SkinEngine。【代码】。如果主程序主题里定义了控件的默认样式，并且这些默认样式的property有被赋值为style attributes的，则需要动态告知皮肤引擎。
+4、在主程序启动时（一般是在Application子类里），初始化皮肤引擎SkinEngine。如果主程序主题里定义了控件的默认样式，并且这些默认样式的property有被赋值为style attributes的，则需要动态告知皮肤引擎。
 
-5、让主程序的activity继承自皮肤引擎公开的SkinWrapperActivity类。
+{{{
+		// init the skin engine
+		SkinEngine skinEngine = SkinEngine.getInstance();
+		skinEngine.init(this, R.styleable.AppTheme);
+		// add custom default widget styles
+		skinEngine.addWidgetDefaultStyleAttr("Button", "background", R.attr.bg_btn);
+		skinEngine.addWidgetDefaultStyleAttr("Button", "textColor", R.attr.textColorPrimary);
+		skinEngine.addWidgetDefaultStyleAttr("CheckBox", "button", R.attr.cb_selector);
+		skinEngine.addWidgetDefaultStyleAttr("ListView", "listSelector", R.attr.bg_list);
+}}}
 
-6、如果某个activity会在换肤动作发生前就存在，并且在换肤事件发生后，需要即时响应更改外观的（通常是在软件里通往换肤触发页面的路径上的activity），则需要在该activity的onCreate方法中调用enableResponseOnSkinChangeEvent(true);
+5、让主程序的activity继承自皮肤引擎公开的SkinWrapperActivity类。一般来说，应用程序都会有自己的页面基类BaseActivity，那么，让它继承SkinWrapperActivity即可。
 
-7、在主程序里设计换肤功能触发入口，在该处调用SkinEngine.getInstance().setSkinApk(apkPath);实现换肤。
+6、如果某个activity会在换肤动作发生前就存在，并且在换肤事件发生后，需要即时响应更改外观的（通常是在软件里通往换肤触发页面的路径上的activity），则需要在该activity的onCreate方法中调用以下方法。
+
+{{{
+enableResponseOnSkinChangeEvent(true);
+}}}
+
+7、在主程序里设计换肤功能触发入口，在该处调用换肤函数实现换肤。
+
+{{{
+SkinEngine.getInstance().setSkinApk(apkPath);
+}}}
