--- a/wiki/SkinEngine.wiki
+++ b/wiki/SkinEngine.wiki
@@ -8,7 +8,7 @@ SkinEngine项目的目标是开发一个简单易用的皮肤引擎，让android
 请先下载示例程序[http://android-skin-engine.googlecode.com/files/SkinEngineDemo.7z SkinEngineDemo]及其皮肤资源包程序[http://android-skin-engine.googlecode.com/files/SkinEngineDemoSkin.7z SkinEngineDemoSkin]。
 [http://android-skin-engine.googlecode.com/files/SkinEngineDemo.7z SkinEngineDemo]是一个简单的应用程序，使用了SkinEngine皮肤引擎库。[http://android-skin-engine.googlecode.com/files/SkinEngineDemoSkin.7z SkinEngineDemoSkin]是它的皮肤工程，皮肤资源打包在SkinEngineDemoSkin.apk中。
 
-1、将编译打包好的皮肤资源包SkinEngineDemoSkin.apk放在“/mnt/sdcard/SkinEngineDemo/”目录下。
+1、将编译打包好的皮肤资源包`SkinEngineDemoSkin.apk`放在`“/mnt/sdcard/SkinEngineDemo/”`目录下。
 
 2、运行[http://android-skin-engine.googlecode.com/files/SkinEngineDemo.7z SkinEngineDemo]，它有3个页面，可以先简单浏览、点击各个页面的控件，看看程序外观展示。
 
