--- a/wiki/SkinEngine.wiki
+++ b/wiki/SkinEngine.wiki
@@ -2,7 +2,11 @@
 =概述=
 Android开发框架提供了主题机制，可以让应用程序根据配置展示不同的外观。但依靠主题并不能实现完美的换肤，它有以下不足：（1）皮肤资源必须和主程序一起打包，增加了应用程序的体积，使得皮肤不能无限扩展，不能动态添加。（2）不能动态换肤。应用主题有两种方法，一是在manifest文件中配置，二是在activity创建之前通过代码设置。无法实现运行后动态选择皮肤。
 
-SkinEngine项目的目标是开发一个简单易用的皮肤引擎，让android应用程序方便的实现换肤功能。和android主题机制类似，SkinEngine以样式属性资源的名字为标识，关联皮肤资源。但区别在于，SkinEngine关联的资源存在于主程序外部的独立apk包里，主程序不需要知道外部皮肤的存在；皮肤资源可以后续无限扩展，不需要预先打包在主程序中，不会增加主程序安装包大小。另外，SkinEngine支持运行时动态换肤。
+SkinEngine项目的目标是开发一个简单易用的皮肤引擎，让android应用程序方便的实现换肤功能。
+
+和android主题机制类似，SkinEngine以样式属性资源的名字为标识，关联皮肤资源。但区别在于，SkinEngine关联的资源存在于主程序外部的独立apk包里，主程序不需要知道外部皮肤的存在；皮肤资源可以后续无限扩展，不需要预先打包在主程序中，不会增加主程序安装包大小。皮肤apk包无需安装，只是打包资源的一种方式，这种方式的好处是方便组织android的各种资源drawable/color/string/dimen/array……。
+
+另外，SkinEngine支持运行时动态换肤。
 
 =示例程序=
 请先下载示例程序[http://android-skin-engine.googlecode.com/files/SkinEngineDemo.7z SkinEngineDemo]及其皮肤资源包程序[http://android-skin-engine.googlecode.com/files/SkinEngineDemoSkin.7z SkinEngineDemoSkin]。
