Edited wiki page SkinEngine through web user interface.

--- a/wiki/SkinEngine.wiki
+++ b/wiki/SkinEngine.wiki
@@ -74,9 +74,8 @@ SkinEngine.getInstance().setSkinApk(apkPath);
 *相关方法的说明见文档[http://android-skin-engine.googlecode.com/files/doc.7z doc]*
 
 
-=后续将完善=
-1、支持的style property完善补全，理论上可以支持任意属性，包括文字内容等的替换。（目前只支持以下属性View的background，`TextView`的textColor、textSize、button，`ListView`的divider、listSelector，`ImageView`的src。）
+=高级用法=
+1、支持程序动态设置控件和关联皮肤资源。
+2、支持自定义控件换肤。
 
-2、考虑支持自定义控件的方案。
-
-3、支持代码动态添加换肤的“控件-属性-资源标识”。
+（未完待续）
